# python

aws_cf_client/: Pipfile  main.py
aws_cloudtrail_parser/: Pipfile  main.py
aws_foreign_account_checker/: Pipfile  main.py
azure_client/: Pipfile  iotHub.py  main.py
cheat_sheet/: classes.py  exceptions.py  main.py
chess_engine/: pyproject.toml
chess_engine/chess_engine/: main.py
first_try/: Pipfile  main.py
regex_finder/: main.py
