[tool.poetry]
name = "chess_engine"
version = "0.1.0"
description = ""
authors = ["Ulrich Buschbaum <exxeta.u.buschbaum@extaccount.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chess = "1.11.1"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chess_engine = "chess_engine:main"
